# simple-radiomics-pipeline

./: .gitignore  LICENSE  README.md  extract-statistics.sh  full-pipeline.sh  pipeline.sh  pyproject.toml
output/statistics/: preop.brain_t1c.csv  preop.brain_t1n.csv  preop.brain_t2f.csv  preop.brain_t2w.csv
radiomics/: radiomicsConfig.yaml
src/: extract_features.py  extract_statistics.py  merge_datasets.py
