[project]
name = "glioma-radiomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pyradiomics",
    "tqdm>=4.67.1",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "xformers>=0.0.32.post2",
]

[tool.uv.sources]
pyradiomics = { git = "https://github.com/AIM-Harvard/pyradiomics" }
